--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.7"
   }
 }
